--- a/storyblok-app/src/app/globals.css
+++ b/storyblok-app/src/app/globals.css
@@ -22,9 +22,14 @@
     @apply mx-auto px-4 md:px-6 lg:px-8 xl:px-10 max-w-container;
   }
 
-  p {
-    @apply text-body-sm md:text-body-md lg:text-body-lg;
+  p,
+  .text-body {
+    @apply text-body-sm md:text-body-md lg:text-body-lg mb-[0.7em];
     font-weight: var(--font-weight-body);
+  }
+
+  p:last-child {
+    @apply mb-0;
   }
 
   .button {
@@ -38,7 +43,17 @@
   h4,
   h5,
   h6 {
+    @apply mb-[0.7em];
     font-weight: var(--font-weight-heading);
+  }
+
+  h1:last-child,
+  h2:last-child,
+  h3:last-child,
+  h4:last-child,
+  h5:last-child,
+  h6:last-child {
+    @apply mb-0;
   }
 
   h1,
@@ -74,5 +89,13 @@
 
   .spacing {
     @apply px-6 py-12 md:py-16 lg:py-20;
+  }
+
+  .torn-edge + section {
+    @apply -mt-4;
+  }
+
+  .torn-edge-bottom + .torn-edge-top::before {
+    @apply bg-transparent;
   }
 }
