--- a/storyblok-app/src/components/ui/css/colors.css
+++ b/storyblok-app/src/components/ui/css/colors.css
@@ -1,7 +1,7 @@
 :root {
   /* Base Colors */
   --white: #ffffff;
-  --mauve: #dfa0be;
+  --mauve: #8a6d7b;
   --magenta: #c7017f;
   --lavander: #9e7e91;
   --gray: #6c6a66;
